[package]
name = "oxide-cli"
version = "0.7.0"
authors = ["tuqqu <artkurbidaev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide-parser = { path = "../oxide-parser" }
oxide-interpreter = { path = "../oxide-interpreter" }