cargo-features = ["different-binary-name"]

[package]
name = "oxide-cli"
version = "0.7.0"
authors = ["tuqqu <artkurbidaev@gmail.com>"]
edition = "2018"

[[bin]]
name = "oxide"
filename="oxide"
path = "src/main.rs"

[dependencies]
oxide-parser = { path = "../oxide-parser" }
oxide-interpreter = { path = "../oxide-interpreter" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html